--- a/index.html
+++ b/index.html
@@ -1,146 +1,450 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en-AU">
 <head>
-<meta charset="UTF-8">
-<title>Customer Care AI – WOW</title>
-<style>
-body{margin:0;overflow:hidden;background:#000;font-family:sans-serif;}
-canvas{display:block;}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Customer Care AI</title>
+
+  <!-- Clean deck typography -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    :root{
+      --bg0:#070A12;
+      --bg1:#0B1022;
+      --card:#0E1630;
+      --card2:#0A1024;
+      --line:rgba(255,255,255,.08);
+      --text:rgba(255,255,255,.92);
+      --muted:rgba(255,255,255,.65);
+      --muted2:rgba(255,255,255,.45);
+      --accent:#6EE7FF;     /* cyan */
+      --accent2:#A78BFA;    /* violet */
+      --warn:#ff5b5b;
+      --ok:#72ff9e;
+
+      --r16:16px;
+      --r20:20px;
+      --shadow: 0 22px 60px rgba(0,0,0,.55);
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 700px at 18% 10%, rgba(167,139,250,.16), transparent 60%),
+        radial-gradient(900px 600px at 85% 15%, rgba(110,231,255,.12), transparent 55%),
+        radial-gradient(800px 600px at 50% 120%, rgba(110,231,255,.10), transparent 55%),
+        linear-gradient(180deg, var(--bg0), var(--bg1));
+      display:flex;
+      justify-content:center;
+      padding:22px;
+    }
+
+    .shell{
+      width:min(1120px, 100%);
+      display:flex;
+      flex-direction:column;
+      gap:14px;
+    }
+
+    .topbar{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:14px;
+      padding:16px 18px;
+      border:1px solid var(--line);
+      border-radius: var(--r20);
+      background: rgba(14,22,48,.72);
+      backdrop-filter: blur(10px);
+      box-shadow: var(--shadow);
+    }
+
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      min-width: 260px;
+    }
+    .logo{
+      width:38px; height:38px;
+      border-radius:12px;
+      background:
+        linear-gradient(135deg, rgba(110,231,255,.95), rgba(167,139,250,.95));
+      box-shadow: 0 12px 30px rgba(110,231,255,.14);
+    }
+    .brand h1{
+      font-size:16px;
+      margin:0;
+      letter-spacing:.2px;
+      line-height:1.1;
+    }
+    .brand p{
+      margin:2px 0 0 0;
+      font-size:12.5px;
+      color:var(--muted);
+    }
+
+    .controls{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      flex-wrap:wrap;
+      justify-content:flex-end;
+    }
+
+    .btn{
+      border:1px solid var(--line);
+      background: rgba(255,255,255,.06);
+      color:var(--text);
+      padding:10px 12px;
+      border-radius: 12px;
+      font-weight:600;
+      cursor:pointer;
+      transition: transform .06s ease, background .2s ease, border-color .2s ease;
+      user-select:none;
+    }
+    .btn:hover{ background: rgba(255,255,255,.10); }
+    .btn:active{ transform: translateY(1px); }
+
+    .btn.primary{
+      border-color: rgba(110,231,255,.28);
+      background: linear-gradient(135deg, rgba(110,231,255,.22), rgba(167,139,250,.20));
+    }
+
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:10px 12px;
+      border-radius: 999px;
+      border:1px solid var(--line);
+      background: rgba(255,255,255,.05);
+      font-size:12.5px;
+      color:var(--muted);
+      white-space:nowrap;
+    }
+    .dot{
+      width:8px; height:8px; border-radius:999px;
+      background: rgba(255,255,255,.35);
+    }
+    .dot.ok{ background: rgba(114,255,158,.9); }
+    .dot.warn{ background: rgba(255,91,91,.95); }
+    .dot.live{ background: rgba(110,231,255,.95); }
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1.25fr .75fr;
+      gap:14px;
+    }
+    @media (max-width: 980px){
+      .grid{ grid-template-columns: 1fr; }
+      .brand{ min-width: unset; }
+    }
+
+    .card{
+      border:1px solid var(--line);
+      border-radius: var(--r20);
+      background: rgba(10,16,36,.72);
+      backdrop-filter: blur(10px);
+      box-shadow: var(--shadow);
+      overflow:hidden;
+    }
+
+    .cardHead{
+      padding:14px 16px;
+      border-bottom:1px solid var(--line);
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+    }
+    .cardHead h2{
+      margin:0;
+      font-size:13px;
+      letter-spacing:.18px;
+      color:var(--muted);
+      font-weight:700;
+      text-transform: uppercase;
+    }
+    .cardBody{ padding:14px 16px; }
+
+    .log{
+      height: 420px;
+      overflow:auto;
+      padding:12px;
+      border-radius: 14px;
+      border:1px solid var(--line);
+      background: rgba(0,0,0,.22);
+      line-height:1.35;
+      font-size:14px;
+    }
+    .msg{ margin:10px 0; }
+    .msg .who{ font-weight:700; }
+    .msg.sys{ color: var(--warn); }
+    .msg.you{ color: rgba(114,255,158,.95); }
+    .msg.ai{ color: rgba(110,231,255,.92); }
+    .msg .txt{ color: var(--text); font-weight:500; }
+    .msg.sys .txt{ color: rgba(255,255,255,.85); font-weight:500; }
+
+    .hint{
+      margin-top:10px;
+      font-size:12.5px;
+      color: var(--muted2);
+    }
+
+    .form{
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+    }
+    label{
+      font-size:12px;
+      color: var(--muted);
+      font-weight:600;
+      letter-spacing:.2px;
+    }
+    input, textarea{
+      width:100%;
+      border-radius: 14px;
+      border:1px solid var(--line);
+      background: rgba(0,0,0,.22);
+      color: var(--text);
+      padding:12px 12px;
+      outline:none;
+      font-family:inherit;
+      font-size:14px;
+    }
+    textarea{ min-height:120px; resize: vertical; }
+    input:focus, textarea:focus{
+      border-color: rgba(110,231,255,.35);
+      box-shadow: 0 0 0 3px rgba(110,231,255,.10);
+    }
+  </style>
 </head>
+
 <body>
-<script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+  <div class="shell">
 
-<script>
+    <div class="topbar">
+      <div class="brand">
+        <div class="logo"></div>
+        <div>
+          <h1>Customer Care AI</h1>
+          <p>Hands-free voice agent (Chrome recommended)</p>
+        </div>
+      </div>
 
-// ---------------- SCENE SETUP ----------------
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(70, innerWidth/innerHeight, 0.1, 1000);
-camera.position.z = 20;
+      <div class="controls">
+        <button class="btn primary" id="enableVoiceBtn">Enable Voice (1x)</button>
+        <button class="btn" id="stopVoiceBtn">Stop</button>
 
-const renderer = new THREE.WebGLRenderer({antialias:true});
-renderer.setSize(innerWidth, innerHeight);
-document.body.appendChild(renderer.domElement);
+        <div class="pill" id="statusPill">
+          <span class="dot" id="statusDot"></span>
+          <span id="statusText">idle</span>
+        </div>
+      </div>
+    </div>
 
-window.addEventListener('resize',()=>{
-camera.aspect = innerWidth/innerHeight;
-camera.updateProjectionMatrix();
-renderer.setSize(innerWidth, innerHeight);
-});
+    <div class="grid">
+      <div class="card">
+        <div class="cardHead">
+          <h2>Conversation</h2>
+          <div class="pill" title="Internal state">
+            <span class="dot" id="modeDot"></span>
+            <span id="modeText">idle</span>
+          </div>
+        </div>
+        <div class="cardBody">
+          <div class="log" id="log"></div>
+          <div class="hint">
+            Click “Enable Voice” once → speak naturally → stop talking → it captures your final transcript.
+          </div>
+        </div>
+      </div>
 
-// ---------------- OCEAN + SUNSET ----------------
-const skyGeo = new THREE.SphereGeometry(200,32,32);
-const skyMat = new THREE.MeshBasicMaterial({
-color:0x0b1020,
-side:THREE.BackSide
-});
-const sky = new THREE.Mesh(skyGeo, skyMat);
-scene.add(sky);
+      <div class="card">
+        <div class="cardHead">
+          <h2>Lead capture (optional)</h2>
+        </div>
+        <div class="cardBody">
+          <div class="form">
+            <div>
+              <label>Full name</label>
+              <input placeholder="e.g., Rick Edmiston"/>
+            </div>
+            <div>
+              <label>Email</label>
+              <input placeholder="name@email.com"/>
+            </div>
+            <div>
+              <label>Phone</label>
+              <input placeholder="04xx xxx xxx"/>
+            </div>
+            <div>
+              <label>Notes</label>
+              <textarea placeholder="What do they want? What problem are they trying to solve?"></textarea>
+            </div>
+            <button class="btn" type="button" onclick="alert('Optional form only. Voice loop is the priority.')">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-const sun = new THREE.Mesh(
-new THREE.SphereGeometry(10,32,32),
-new THREE.MeshBasicMaterial({color:0xff6600})
-);
-sun.position.set(0,-20,-100);
-scene.add(sun);
+  </div>
 
-// ---------------- MONSTER ----------------
-const monster = new THREE.Mesh(
-new THREE.BoxGeometry(6,6,6),
-new THREE.MeshStandardMaterial({color:0x00ffff})
-);
-monster.position.z = -20;
-scene.add(monster);
+  <script>
+    // ====== UI helpers ======
+    const logEl = document.getElementById("log");
+    const statusText = document.getElementById("statusText");
+    const statusDot = document.getElementById("statusDot");
+    const modeText = document.getElementById("modeText");
+    const modeDot = document.getElementById("modeDot");
 
-const light = new THREE.PointLight(0xffffff,2);
-light.position.set(10,20,20);
-scene.add(light);
+    function addMsg(type, text){
+      const div = document.createElement("div");
+      div.className = `msg ${type}`;
+      const who = type === "you" ? "You" : type === "ai" ? "AI" : "System";
+      div.innerHTML = `<span class="who">${who}:</span> <span class="txt"></span>`;
+      div.querySelector(".txt").textContent = text;
+      logEl.appendChild(div);
+      logEl.scrollTop = logEl.scrollHeight;
+    }
 
-// ---------------- DOOR ----------------
-const door = new THREE.Mesh(
-new THREE.BoxGeometry(6,10,0.5),
-new THREE.MeshStandardMaterial({color:0x111111})
-);
-door.position.set(0,0,-28);
-door.visible = false;
-scene.add(door);
+    function setPill(dotEl, textEl, state){
+      textEl.textContent = state;
+      dotEl.className = "dot";
+      if (state === "listening") dotEl.classList.add("live");
+      else if (state === "error") dotEl.classList.add("warn");
+      else if (state === "ready" || state === "enabled") dotEl.classList.add("ok");
+    }
 
-// ---------------- CONSTELLATION ----------------
-const sats=[];
-for(let i=0;i<18;i++){
-const s=new THREE.Mesh(
-new THREE.SphereGeometry(0.5,16,16),
-new THREE.MeshStandardMaterial({color:0x00ffff, emissive:0x00ffff})
-);
-s.userData.orbitR=8+Math.random()*6;
-s.userData.phase=Math.random()*Math.PI*2;
-s.userData.speed=0.2+Math.random()*0.3;
-s.userData.y=(Math.random()-0.5)*6;
-s.visible=false;
-scene.add(s);
-sats.push(s);
-}
+    function setStatus(state){
+      setPill(statusDot, statusText, state);
+    }
+    function setMode(state){
+      setPill(modeDot, modeText, state);
+    }
 
-// ---------------- TIMELINE ----------------
-let t=0;
-let phase=0;
+    // ====== Voice engine (stable Android Chrome) ======
+    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
 
-function animate(){
-requestAnimationFrame(animate);
-t+=0.016;
+    let recognition = null;
+    let enabled = false;
+    let stopping = false;
+    let isRunning = false;
 
-// PHASE 0 – MONSTER BURST
-if(phase===0){
-monster.position.z+=0.5;
-monster.rotation.x+=0.1;
-monster.rotation.y+=0.1;
-if(monster.position.z>5){
-phase=1;
-}
-}
+    function buildRecognition(){
+      const r = new SR();
+      r.lang = "en-AU";
+      r.continuous = true;
+      r.interimResults = true;
+      r.maxAlternatives = 1;
 
-// PHASE 1 – SHRINK INTO BIRD
-if(phase===1){
-monster.scale.multiplyScalar(0.95);
-monster.position.y+=0.2;
-monster.position.z-=0.3;
-if(monster.scale.x<0.2){
-monster.visible=false;
-door.visible=true;
-phase=2;
-}
-}
+      r.onstart = () => {
+        isRunning = true;
+        setStatus("listening");
+        setMode("listening");
+        addMsg("sys", "Mic is LIVE. Speak normally.");
+      };
 
-// PHASE 2 – DOOR WAIT THEN OPEN
-if(phase===2){
-if(t>8){
-door.rotation.y+=0.02;
-if(door.rotation.y>1.2){
-phase=3;
-sats.forEach(s=>s.visible=true);
-}
-}
-}
+      r.onerror = (e) => {
+        const err = e?.error || "unknown";
+        setStatus("error");
+        setMode("error");
+        addMsg("sys", `Voice error: ${err}`);
+      };
 
-// PHASE 3 – CONSTELLATION ORBIT
-if(phase===3){
-for(let s of sats){
-let a=t*s.userData.speed+s.userData.phase;
-let R=s.userData.orbitR;
-s.position.set(
-Math.cos(a)*R,
-s.userData.y,
--28+Math.sin(a)*R
-);
-}
-}
+      r.onend = () => {
+        isRunning = false;
+        if (enabled && !stopping) {
+          setStatus("listening");
+          setMode("restarting");
+          setTimeout(() => { try { r.start(); } catch(_){} }, 250);
+        } else {
+          setStatus("idle");
+          setMode("idle");
+        }
+      };
 
-renderer.render(scene,camera);
-}
+      let finalBuf = "";
+      let lastFinal = "";
+      let lastAt = 0;
 
-animate();
+      r.onresult = (event) => {
+        for (let i = event.resultIndex; i < event.results.length; i++){
+          const res = event.results[i];
+          const txt = (res?.[0]?.transcript || "").trim();
+          if (!txt) continue;
+          if (res.isFinal) finalBuf += (finalBuf ? " " : "") + txt;
+        }
 
-</script>
+        const finalText = finalBuf.trim();
+        if (!finalText) return;
+
+        // Debounce duplicate finals (common on mobile)
+        const now = Date.now();
+        if (finalText === lastFinal && (now - lastAt) < 1200){
+          finalBuf = "";
+          return;
+        }
+        lastFinal = finalText;
+        lastAt = now;
+        finalBuf = "";
+
+        addMsg("you", finalText);
+
+        // Wire to your backend later:
+        // sendToAI(finalText);
+      };
+
+      return r;
+    }
+
+    function enableVoice(){
+      if (!SR){
+        addMsg("sys", "SpeechRecognition not supported on this browser.");
+        setStatus("error");
+        setMode("error");
+        return;
+      }
+
+      if (!recognition) recognition = buildRecognition();
+
+      enabled = true;
+      stopping = false;
+
+      setStatus("enabled");
+      setMode("enabled");
+      addMsg("sys", "Voice enabled. Hands-free loop is ON.");
+
+      try { recognition.start(); } catch(_){
+        // If already started, ignore
+      }
+    }
+
+    function stopVoice(){
+      stopping = true;
+      enabled = false;
+      setMode("stopping");
+      setStatus("idle");
+      addMsg("sys", "Stopped.");
+      try { recognition?.stop(); } catch(_){}
+    }
+
+    document.getElementById("enableVoiceBtn").addEventListener("click", enableVoice);
+    document.getElementById("stopVoiceBtn").addEventListener("click", stopVoice);
+
+    // Initial
+    setStatus("idle");
+    setMode("idle");
+    addMsg("sys", "Ready. Click Enable Voice once.");
+  </script>
 </body>
 </html>
